# test_websocket

./: .cursorrules  .env  .env.sample  .gitignore  .pre-commit-config.yaml  README.md  chat.db  instructions.md  pyproject.toml
.husky/: pre-commit
app/: .cursorrules  config.py  main.py
app/adapters/: ai_adapter.py
app/api/handlers/: connection_manager.py  websocket_handler.py
app/api/handlers/websocket/: connection_manager.py  task_monitor.py  websocket_handler.py
app/api/routes/: chat.py  chat_websocket.py  http_endpoints.py  websocket.py
app/application/: task_manager.py
app/application/services/: chat_service.py
app/config/: database.py  dependencies.py  env.py  logger.py  redis.py  redis_config.py  settings.py
app/db/: database.py  models.py
app/db/repositories/: chat_repository.py
app/domain/entities/: chat.py
app/domain/services/: ai_model.py
app/infrastructure/: redis_config.py
app/infrastructure/adapters/: ai_adapter.py
app/infrastructure/db/: database.py  models.py
app/infrastructure/repositories/: chat_repository.py
app/pipelines/: base.py  manager.py  planning.py  standard.py
app/presentation/api/: http_endpoints.py
app/presentation/websocket/: chat_websocket.py
app/schemas/: ai.py  ai_model.py  chat.py  exceptions.py  user.py  websocket.py
app/services/: ai_service.py  background_task_processor.py  chat_service.py
app/services/ai/: adapter.py  service.py
app/services/ai/pipelines/: base.py  manager.py  planning.py  standard.py
app/services/chat/: repository.py  service.py
app/services/core/: background_task_processor.py
app/tests/: conftest.py  test_background_task_processor.py  test_chat_websocket.py
app/tests/api/handlers/: test_websocket_handler.py
app/tests/api/routes/: test_chat_websocket.py
app/tests/pipelines/: test_manager.py
app/tests/services/: test_ai_service.py
app/tests/services/ai/: test_ai_service.py
app/tests/services/ai/pipelines/: test_manager.py  test_pipelines.py
app/tests/services/core/: test_background_task_processor.py
app/utils/: universal_serializer.py
app/utils/async_redis_utils/: connection.py  data_struc_base.py  dict.py  lrucache.py  queue.py  set.py  task_serializer.py
chat-frontend/: biome.json  bun.lockb  package.json  vite.config.ts
chat-frontend/src/: App.tsx  types.ts
chat-frontend/src/api/: chatApi.ts
chat-frontend/src/atoms/: chat.ts
chat-frontend/src/components/: ErrorBoundary.tsx
chat-frontend/src/components/chat/ChatMain/: ChatHeader.tsx  ChatInput.tsx  MessageItem.tsx  MessageList.tsx
chat-frontend/src/components/chat/ChatSidebar/: BaseChatList.tsx  ChatList.tsx  ChatListItem.tsx  ChatPageList.tsx  HomeChatList.tsx  index.tsx
chat-frontend/src/components/ui/: sidebar.tsx
chat-frontend/src/config/: constants.ts
chat-frontend/src/hooks/: useChat.ts  useChatWebSocket.ts  useWebSocketService.ts
chat-frontend/src/pages/: ChatPage.tsx  ChatPageV2.tsx  HomePage.tsx  HomePageV2.tsx
chat-frontend/src/services/: WebSocketService.ts
chat-frontend/src/store/chat/: atoms.ts
chat-frontend/src/types/: chat.ts  websocket.ts
chat-frontend/src/utils/: messageFormatters.ts  structuredDataRenderer.tsx
tests/: conftest.py  test_main.py
tests/domain/entities/: test_chat.py
tests/domain/services/: test_ai_model.py
tests/infrastructure/adapters/: test_ai_adapter.py
tests/infrastructure/repositories/: test_chat_repository.py
